[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-analyser"
version = "0.1.0"
description = "MeshCore-focused LoRa analyser for DongLoRa"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "pydantic>=2.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
meshcore-analyser = "analyser.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
